--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -22,19 +22,30 @@
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
-                android:background="?attr/colorPrimary">
+                android:background="@color/primary">
             </android.support.v7.widget.Toolbar>
+
+            <android.support.design.widget.TabLayout
+                android:id="@+id/tabLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/primary"
+                app:tabIndicatorColor="@color/white"
+                app:tabSelectedTextColor="@color/white"
+                app:tabIndicatorHeight="6dp"
+                >
+
+            </android.support.design.widget.TabLayout>
         </android.support.design.widget.AppBarLayout>
 
 
-
-        <FrameLayout
-            android:layout_marginTop="?attr/actionBarSize"
+        <android.support.v4.view.ViewPager
             android:id="@+id/container"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:layout_marginTop="?attr/actionBarSize">
 
-        </FrameLayout>
+        </android.support.v4.view.ViewPager>
     </android.support.design.widget.CoordinatorLayout>
 
     <android.support.design.widget.NavigationView
