--- a/app/src/main/res/layout/activity_add_entry.xml
+++ b/app/src/main/res/layout/activity_add_entry.xml
@@ -6,7 +6,7 @@
               android:layout_height="match_parent"
               android:fitsSystemWindows="true"
               android:orientation="vertical"
-              tools:context="vieww.ActivityAddEntry">
+              tools:context="com.example.roma.mtracker_v3.vieww.ActivityAddEntry">
 
 
     <FrameLayout
