--- a/app/src/main/res/layout/fragment_insert_description.xml
+++ b/app/src/main/res/layout/fragment_insert_description.xml
@@ -2,7 +2,8 @@
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
-             tools:context="vieww.FragmentInsertDescription">
+
+             tools:context="com.example.roma.mtracker_v3.vieww.FragmentInsertDescription">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
@@ -11,9 +12,10 @@
         android:text="@string/hello_blank_fragment"
         />
     <android.support.v7.widget.RecyclerView
+        android:layout_gravity="center"
         android:id="@+id/recycler_insert_description"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
 
     </android.support.v7.widget.RecyclerView>
 
