--- a/app/src/main/res/layout/recycler_insert_description_item.xml
+++ b/app/src/main/res/layout/recycler_insert_description_item.xml
@@ -1,31 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:layout_margin="5dp"
-                                    android:orientation="horizontal">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp">
 
-<RelativeLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:padding="5dp"
-    android:layout_gravity="center">
-    <ImageView
-        android:id="@+id/description_image"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/food"/>
-
-    <TextView
-
-        android:id="@+id/description_description"
-        android:layout_toRightOf="@id/description_image"
-        android:layout_marginLeft="20dp"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center_vertical"
-        android:text="TestTestTestTest"
-        android:textSize="20sp"/>
-</RelativeLayout>
+        android:gravity="center"
+        android:orientation="vertical"
+        android:padding="5dp">
 
-</android.support.v7.widget.CardView>
+
+        <ImageView
+            android:id="@+id/description_image"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/food"/>
+
+        <TextView
+            android:layout_marginTop="5dp"
+            android:text="Test"
+            android:textSize="20sp"
+            android:id="@+id/description_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+    </LinearLayout>
+
+</RelativeLayout>
