--- a/app/src/main/res/layout/fragment_in.xml
+++ b/app/src/main/res/layout/fragment_in.xml
@@ -20,9 +20,9 @@
                 android:id="@+id/appbar2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="@color/primary"
                 android:paddingTop="@dimen/appbar_padding_top"
-                android:theme="@style/AppTheme.AppBarOverlay"
-                android:background="@color/primary">
+                android:theme="@style/AppTheme.AppBarOverlay">
 
                 <android.support.v7.widget.Toolbar
                     android:id="@+id/toolbar"
@@ -85,7 +85,6 @@
                 />
 
 
-
             <TextView
                 android:id="@+id/value"
                 android:layout_width="wrap_content"
@@ -95,6 +94,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"/>
+
             <TextView
                 android:id="@+id/minus"
                 android:layout_width="wrap_content"
@@ -102,8 +102,8 @@
                 android:text="-"
                 android:textColor="@color/white"
                 android:textSize="50sp"
-                app:layout_constraintRight_toLeftOf="@id/value"
                 app:layout_constraintBaseline_toBaselineOf="@id/value"
+                app:layout_constraintRight_toLeftOf="@id/value"
                 />
 
         </android.support.constraint.ConstraintLayout>
@@ -208,9 +208,10 @@
                 android:text="0"/>
 
             <ImageView
-
+                android:id="@+id/button_backspace"
                 style="@style/textButtonKeyboards"
                 android:scaleType="center"
+
                 android:src="@drawable/ic_backspace_black_18dp"/>
 
         </LinearLayout>
