--- a/app/src/main/res/layout/child_recycle_item_thismonth.xml
+++ b/app/src/main/res/layout/child_recycle_item_thismonth.xml
@@ -6,38 +6,33 @@
 
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                     android:layout_width="match_parent"
-                    android:layout_height="80dp"
+                    android:layout_height="72dp"
                     android:orientation="horizontal"
                     android:paddingBottom="5dp"
-                    android:paddingLeft="20dp"
-                    android:paddingRight="20dp"
+                    android:paddingLeft="16dp"
+                    android:paddingRight="16dp"
                     android:paddingTop="5dp">
 
         <ImageView
             android:id="@+id/imageDescription"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:layout_centerVertical="true"
-            android:text="DATE"/>
+            style="@style/imagesInRecycler"/>
 
         <TextView
             android:id="@+id/descriptionChild"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="20dp"
+            android:layout_marginLeft="24dp"
             android:layout_toRightOf="@id/imageDescription"
-            android:textSize="20sp"
-            android:text="description"/>
+            android:textSize="20sp"/>
 
         <TextView
             android:id="@+id/valueChild"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
             android:layout_alignParentRight="true"
-            android:textSize="20sp"
+            android:layout_centerVertical="true"
             android:text="value"
-            />
+            android:textSize="20sp"/>
     </RelativeLayout>
 </android.support.v7.widget.CardView>
