--- a/app/src/main/res/layout/fragment_fragment_transaction_insert.xml
+++ b/app/src/main/res/layout/fragment_fragment_transaction_insert.xml
@@ -78,7 +78,7 @@
 
 
             <TextView
-                android:id="@+id/value"
+                android:id="@+id/value_transaction_insert"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/white"
@@ -94,8 +94,8 @@
                 android:text="-"
                 android:textColor="@color/white"
                 android:textSize="50sp"
-                app:layout_constraintBaseline_toBaselineOf="@id/value"
-                app:layout_constraintRight_toLeftOf="@id/value"
+                app:layout_constraintBaseline_toBaselineOf="@id/value_transaction_insert"
+                app:layout_constraintRight_toLeftOf="@id/value_transaction_insert"
                 />
 
         </android.support.constraint.ConstraintLayout>
