--- a/app/src/main/res/layout/fragment_transaction_insert.xml
+++ b/app/src/main/res/layout/fragment_transaction_insert.xml
@@ -4,7 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:paddingTop="20dp">
+    android:paddingTop="20dp"
+    android:focusableInTouchMode="true">
 
     <!--<LinearLayout-->
     <!--android:id="@+id/header_transaction_detail"-->
