--- a/app/src/main/res/layout/fragment_transaction_insert.xml
+++ b/app/src/main/res/layout/fragment_transaction_insert.xml
@@ -3,8 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    android:paddingTop="20dp"
     android:focusableInTouchMode="true">
 
     <!--<LinearLayout-->
@@ -47,9 +47,26 @@
     <!--android:layout_height="wrap_content"-->
     <!--android:layout_margin="20dp"-->
     <!--android:layout_below="@id/value_transaction_detail"/>-->
+    <android.support.design.widget.AppBarLayout
+        android:id="@+id/appbar2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/primary">
+
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:background="@drawable/gradient_red"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        app:layout_scrollFlags="scroll|enterAlways"
+        app:popupTheme="@style/AppTheme.PopupOverlay">
+
+    </android.support.v7.widget.Toolbar>
+    </android.support.design.widget.AppBarLayout>
 
 
     <LinearLayout
+        android:layout_marginTop="20dp"
         android:layout_width="match_parent"
         android:layout_height="72dp"
         android:gravity="center"
