--- a/app/src/main/res/layout/fragment_in.xml
+++ b/app/src/main/res/layout/fragment_in.xml
@@ -74,6 +74,18 @@
                 app:layout_constraintRight_toLeftOf="@+id/outcomeText"/>
 
             <TextView
+                android:id="@+id/convertText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Convert"
+                android:textColor="@color/white"
+                android:textSize="20sp"
+
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                />
+
+            <TextView
                 android:id="@+id/outcomeText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
