--- a/app/src/main/res/layout/fragment_tabbed.xml
+++ b/app/src/main/res/layout/fragment_tabbed.xml
@@ -1,8 +1,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:tools="http://schemas.android.com/tools"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-               tools:context="View.MainActivity$PlaceholderFragment">
+    >
 
 
 
@@ -10,7 +9,9 @@
         android:id="@+id/tabs"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        android:background="?attr/colorPrimary"/>
+        android:background="?attr/colorPrimary"
+        android:elevation="0dp"
+        />
     <TextView
         android:id="@+id/section_label"
         android:layout_below="@id/tabs"
