--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,11 +5,12 @@
     <color name="colorAccent">#FF4081</color>
     <color name="primary">#4CAF50</color>
     <color name="primary_dark">#388E3C</color>
-    <color name="primary_light">#C8E6C9</color>
+    <color name="primary_light">#66BB6A</color>
     <color name="accent">#009688</color>
     <color name="primary_text">#212121</color>
     <color name="secondary_text">#757575</color>
     <color name="white">#FFFFFF</color>
     <color name="divider">#BDBDBD</color>
     <color name="red">#F44336</color>
+    <color name="red_light">#EF5350</color>
 </resources>
