--- a/app/src/main/res/layout/header_converter.xml
+++ b/app/src/main/res/layout/header_converter.xml
@@ -4,10 +4,29 @@
                 android:id="@+id/header_converter"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginTop="?actionBarSize"
                 android:background="@color/primary"
                 app:layout_scrollFlags="scroll|snap"
     >
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="?attr/actionBarSize">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:drawableLeft="@mipmap/ic_info"
+            android:drawablePadding="10dp"
+            android:gravity="center"
+            android:text="Курс валют по состоянию на "/>
+        <TextView
+            android:id="@+id/currencyDate"
+            android:textColor="@color/white"
+
+            android:layout_width="wrap_content"
+            android:layout_height="?attr/actionBarSize"/>
+    </LinearLayout>
 
 
     <LinearLayout
@@ -15,7 +34,8 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:id="@+id/linearLayout">
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -62,7 +82,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginEnd="40dp"
-                android:src="@mipmap/ic_dollar"
+                android:src="@mipmap/ic_euro_symbol_white_48dp"
 
                 />
 
@@ -95,17 +115,13 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginEnd="40dp"
-                android:src="@mipmap/ic_dollar"
+                android:src="@mipmap/ic_gbp"
                 />
 
-            <ImageView
-                android:id="@+id/image_currency_converter"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
 
             <TextView
 
-                android:id="@+id/currencyRUB_value_converter"
+                android:id="@+id/currencyGBR_valueRUB_converter"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="325"
@@ -122,14 +138,6 @@
         </LinearLayout>
 
     </LinearLayout>
-
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentTop="true"
-        android:layout_margin="@dimen/fab_margin"
-        android:src="@mipmap/ic_upload"/>
 
 
 </RelativeLayout>
