--- a/app/src/main/res/layout/page_converter.xml
+++ b/app/src/main/res/layout/page_converter.xml
@@ -20,13 +20,8 @@
 
             <include layout="@layout/header_converter"/>
 
-            <!--<android.support.v7.widget.Toolbar-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="?attr/actionBarSize"-->
-                <!--android:background="@color/primary"-->
-                <!--&gt;-->
 
-            <!--</android.support.v7.widget.Toolbar>-->
+
         </android.support.design.widget.AppBarLayout>
 
 
@@ -37,127 +32,7 @@
             android:layout_height="match_parent"
             app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                          android:layout_width="match_parent"
-                          android:layout_height="match_parent"
-                          android:orientation="vertical">
-
-
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:layout_weight="1"
-                    android:background="@drawable/gradient_red"
-                    android:paddingBottom="80dp"
-                    android:paddingTop="80dp"
-                    >
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_centerVertical="true"
-                        >
-
-                        <RelativeLayout
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_marginStart="40dp"
-                            android:layout_weight="0.6">
-
-                            <TextView
-                                android:id="@+id/value_in_converter"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_alignParentStart="true"
-                                android:layout_alignParentTop="true"
-                                android:textColor="@color/white"
-                                android:textSize="60sp"/>
-
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="3dp"
-                                android:layout_alignEnd="@id/value_in_converter"
-                                android:layout_alignStart="@id/value_in_converter"
-                                android:layout_below="@id/value_in_converter"
-                                android:background="@color/white"
-                                />
-                        </RelativeLayout>
-
-                        <RelativeLayout
-                            android:layout_width="0dp"
-                            android:layout_height="match_parent"
-                            android:layout_weight="0.4">
-
-                            <Spinner
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_gravity="center_vertical"
-                                android:entries="@array/valute">
-                            </Spinner>
-                        </RelativeLayout>
-                    </LinearLayout>
-                </RelativeLayout>
-
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:layout_weight="1"
-                    android:paddingBottom="80dp"
-                    android:paddingTop="80dp">
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_centerVertical="true"
-                        >
-
-                        <RelativeLayout
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_marginStart="40dp"
-                            android:layout_weight="0.6">
-
-                            <TextView
-                                android:id="@+id/value_out_converter"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_centerVertical="true"
-                                android:textColor="@color/red"
-                                android:textSize="60sp"
-                                />
-
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="3dp"
-                                android:layout_alignEnd="@id/value_out_converter"
-                                android:layout_alignStart="@id/value_out_converter"
-                                android:layout_below="@id/value_out_converter"
-                                android:background="@color/red"
-                                />
-                        </RelativeLayout>
-
-                        <RelativeLayout
-                            android:layout_width="0dp"
-
-                            android:layout_height="match_parent"
-                            android:layout_weight="0.4">
-
-                            <Spinner
-                                android:layout_width="wrap_content"
-
-                                android:layout_height="wrap_content"
-                                android:layout_gravity="center_vertical"
-                                android:entries="@array/valute"
-                                >
-                            </Spinner>
-                        </RelativeLayout>
-
-
-                    </LinearLayout>
-                </RelativeLayout>
-
-
-            </LinearLayout>
+            <include layout="@layout/converter_body"/>
         </android.support.v4.widget.NestedScrollView>
     </android.support.design.widget.CoordinatorLayout>
 </FrameLayout>
