create converter logic

--- a/app/src/main/res/layout/fragment_in.xml
+++ b/app/src/main/res/layout/fragment_in.xml
@@ -211,6 +211,7 @@
             android:orientation="horizontal">
 
             <TextView
+                android:id="@+id/button_."
                 style="@style/textButtonKeyboards"
                 android:text="."/>
 
