--- a/app/src/main/res/layout/converter_body.xml
+++ b/app/src/main/res/layout/converter_body.xml
@@ -34,6 +34,7 @@
                     android:textColor="@color/white"
                     android:textSize="60sp"/>
 
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="3dp"
@@ -50,11 +51,21 @@
                 android:layout_weight="0.4">
 
                 <Spinner
+                    android:id="@+id/spinner_IN_converter"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
                     android:entries="@array/valute">
                 </Spinner>
+
+                <ImageView
+                    android:id="@+id/image_currency_IN_converter"
+
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentBottom="true"
+                    android:layout_below="@id/spinner_IN_converter"
+                    android:src="@mipmap/ic_euro_symbol_white_48dp"/>
             </RelativeLayout>
         </LinearLayout>
     </RelativeLayout>
@@ -104,13 +115,22 @@
                 android:layout_weight="0.4">
 
                 <Spinner
+                    android:id="@+id/spinner_OUT_converter"
                     android:layout_width="wrap_content"
-
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
                     android:entries="@array/valute"
                     >
                 </Spinner>
+
+                <ImageView
+                    android:id="@+id/image_currency_OUT_converter"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentBottom="true"
+                    android:layout_below="@id/spinner_OUT_converter"
+                    android:background="@drawable/gradient_red"
+                    android:src="@mipmap/ic_euro_symbol_white_48dp"/>
             </RelativeLayout>
 
 
