--- a/app/src/main/res/layout/header_converter.xml
+++ b/app/src/main/res/layout/header_converter.xml
@@ -23,7 +23,7 @@
         <TextView
             android:id="@+id/currencyDate"
             android:textColor="@color/white"
-
+            android:gravity="center"
             android:layout_width="wrap_content"
             android:layout_height="?attr/actionBarSize"/>
     </LinearLayout>
@@ -58,7 +58,7 @@
                 android:id="@+id/currencyUSD_valueRUB_converter"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="325"
+                android:text="0.0"
                 android:textColor="@color/white"
                 android:textSize="56sp"/>
 
@@ -92,7 +92,7 @@
                 android:id="@+id/currencyEUR_valueRUB_converter"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="325"
+                android:text="0.0"
                 android:textColor="@color/white"
                 android:textSize="56sp"/>
 
@@ -124,7 +124,7 @@
                 android:id="@+id/currencyGBR_valueRUB_converter"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="325"
+                android:text="0.0"
                 android:textColor="@color/white"
                 android:textSize="56sp"/>
 
@@ -138,6 +138,24 @@
         </LinearLayout>
 
     </LinearLayout>
+
+
+    <com.victor.loading.rotate.RotateLoading
+        android:id="@+id/anim_view"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"/>
+
+    <Button
+        android:id="@+id/button_update_converter"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/linearLayout"
+        android:layout_centerHorizontal="true"
+        android:background="@color/white"
+        android:textColor="@color/primary"
+        android:text="Обновить"/>
 
 
 </RelativeLayout>
