--- a/app/src/main/res/layout/converter_body.xml
+++ b/app/src/main/res/layout/converter_body.xml
@@ -1,141 +1,155 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:orientation="vertical">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:background="@drawable/gradient_red"
-        android:paddingBottom="80dp"
-        android:paddingTop="80dp"
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                  android:layout_width="match_parent"
+                  android:layout_height="match_parent"
+                  android:orientation="vertical"
         >
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            >
-
-            <RelativeLayout
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="40dp"
-                android:layout_weight="0.6">
-
-                <TextView
-                    android:id="@+id/value_in_converter"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentStart="true"
-                    android:layout_alignParentTop="true"
-                    android:textColor="@color/white"
-                    android:textSize="60sp"/>
-
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="3dp"
-                    android:layout_alignEnd="@id/value_in_converter"
-                    android:layout_alignStart="@id/value_in_converter"
-                    android:layout_below="@id/value_in_converter"
-                    android:background="@color/white"
-                    />
-            </RelativeLayout>
-
-            <RelativeLayout
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="0.4">
-
-                <Spinner
-                    android:id="@+id/spinner_IN_converter"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:entries="@array/valute">
-                </Spinner>
-
-                <ImageView
-                    android:id="@+id/image_currency_IN_converter"
-
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentBottom="true"
-                    android:layout_below="@id/spinner_IN_converter"
-                    android:src="@mipmap/ic_euro_symbol_white_48dp"/>
-            </RelativeLayout>
-        </LinearLayout>
-    </RelativeLayout>
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:paddingBottom="80dp"
-        android:paddingTop="80dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
+            android:layout_weight="1"
+            android:background="@drawable/gradient_red"
+
             >
 
-            <RelativeLayout
-                android:layout_width="0dp"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="40dp"
-                android:layout_weight="0.6">
+                android:layout_centerVertical="true"
+                android:layout_gravity="center"
+                >
 
-                <TextView
-                    android:id="@+id/value_out_converter"
-                    android:layout_width="match_parent"
+                <RelativeLayout
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
-                    android:textColor="@color/red"
-                    android:textSize="60sp"
-                    />
+                    android:layout_marginStart="40dp"
+                    android:layout_weight="0.6">
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="3dp"
-                    android:layout_alignEnd="@id/value_out_converter"
-                    android:layout_alignStart="@id/value_out_converter"
-                    android:layout_below="@id/value_out_converter"
-                    android:background="@color/red"
-                    />
-            </RelativeLayout>
-
-            <RelativeLayout
-                android:layout_width="0dp"
-
-                android:layout_height="match_parent"
-                android:layout_weight="0.4">
-
-                <Spinner
-                    android:id="@+id/spinner_OUT_converter"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:entries="@array/valute"
-                    >
-                </Spinner>
-
-                <ImageView
-                    android:id="@+id/image_currency_OUT_converter"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentBottom="true"
-                    android:layout_below="@id/spinner_OUT_converter"
-                    android:background="@drawable/gradient_red"
-                    android:src="@mipmap/ic_euro_symbol_white_48dp"/>
-            </RelativeLayout>
+                    <TextView
+                        android:id="@+id/value_in_converter"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentStart="true"
+                        android:layout_alignParentTop="true"
+                        android:textColor="@color/white"
+                        android:textSize="60sp"/>
 
 
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="3dp"
+                        android:layout_alignEnd="@id/value_in_converter"
+                        android:layout_alignStart="@id/value_in_converter"
+                        android:layout_below="@id/value_in_converter"
+                        android:background="@color/white"
+                        />
+                </RelativeLayout>
+
+                <RelativeLayout
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="0.4">
+
+                    <Spinner
+                        android:id="@+id/spinner_IN_converter"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:entries="@array/currency">
+                    </Spinner>
+
+                    <ImageView
+                        android:id="@+id/image_currency_IN_converter"
+
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentBottom="true"
+                        android:layout_below="@id/spinner_IN_converter"
+                        android:src="@mipmap/ic_euro_symbol_white_48dp"/>
+                </RelativeLayout>
+            </LinearLayout>
         </LinearLayout>
-    </RelativeLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            >
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                >
+
+                <RelativeLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="40dp"
+                    android:layout_weight="0.6">
+
+                    <TextView
+                        android:id="@+id/value_out_converter"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:textColor="@color/red"
+                        android:textSize="60sp"
+                        />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="3dp"
+                        android:layout_alignEnd="@id/value_out_converter"
+                        android:layout_alignStart="@id/value_out_converter"
+                        android:layout_below="@id/value_out_converter"
+                        android:background="@color/red"
+                        />
+                </RelativeLayout>
+
+                <RelativeLayout
+                    android:layout_width="0dp"
+
+                    android:layout_height="match_parent"
+                    android:layout_weight="0.4">
+
+                    <Spinner
+                        android:id="@+id/spinner_OUT_converter"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:entries="@array/currency"
+                        >
+                    </Spinner>
+
+                    <ImageView
+                        android:id="@+id/image_currency_OUT_converter"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentBottom="true"
+                        android:layout_below="@id/spinner_OUT_converter"
+                        android:background="@drawable/gradient_red"
+                        android:src="@mipmap/ic_euro_symbol_white_48dp"/>
+                </RelativeLayout>
 
 
-</LinearLayout>
+            </LinearLayout>
+        </LinearLayout>
+
+
+    </LinearLayout>
+
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_centerVertical="true"
+        android:layout_marginEnd="25dp"
+        android:id="@+id/convert_button"
+        android:background="@mipmap/ic_convert"/>
+</RelativeLayout>
