--- a/app/src/main/res/layout/page_converter.xml
+++ b/app/src/main/res/layout/page_converter.xml
@@ -18,21 +18,26 @@
             >
 
 
-            <include layout="@layout/header_converter"/>
-
+            <include
+                layout="@layout/header_converter"
+                />
 
 
         </android.support.design.widget.AppBarLayout>
 
 
         <android.support.v4.widget.NestedScrollView
-            xmlns:android="http://schemas.android.com/apk/res/android"
             android:id="@+id/scroll_view_converter"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:fillViewport="true"
             app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-            <include layout="@layout/converter_body"/>
+            <include
+
+                layout="@layout/converter_body"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
         </android.support.v4.widget.NestedScrollView>
     </android.support.design.widget.CoordinatorLayout>
 </FrameLayout>
